<resources>
    <string name="app_name">AgricultureFacts</string>


    <string name="welcome_message">Welcome to Cricket Quiz</string>
    <string name="completed">Congratulations! \n You have completed the level.</string>
    <string name="not_completed">Oops! \n Level not completed.Play again! </string>
    <string name="select_level">Select Quiz</string>
    <string name="select_category">Select Category</string>
    <string name="select_subcategory">Select Sub Category</string>
    <string name="more_app">More Apps</string>
    <string name="about_us">About Us</string>
    <string name="sound">Sound</string>
    <string name="share_app">Share App</string>
    <string name="vibration">Vibration</string>
    <string name="rateapp">Rate Us</string>
    <string name="bg_music">Background Music</string>
    <string name="share_via">Share via</string>
    <string name="share_subject">I like Cricket Quiz Game</string>
    <string name="achievement">Achievement</string>
    <string name="next_play">Play Next Level</string>
    <string name="play_again">Play Again</string>
    <string name="quite">Home</string>
    <string name="review_answer">Review Answers</string>
    <string name="share_score">Share Your Score</string>
    <string name="action_settings">Settings</string>
    <string name="play_next">Play Again</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="instruction">Instruction</string>
    <string name="start">Start</string>

    <string name="msg_no_internet">No internet connection!</string>
    <string name="no_category">sub category not available!</string>
    <string name="no_sub_category">sub category not available!</string>
    <string name="no_enough_question">Not enough questions, to play level.</string>
    <string name="retry">RETRY</string>
    <string name="title">Title</string>
    <string name="bm_empty_msg">bookmark not available</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="answer">answer</string>
    <string name="extra_note">Extra Note</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="report">Report Question</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="level">Level</string>
    <string name="title_already_used">Life Line Already Used !</string>
    <string name="msg_lifeline_used">You can use only once per level</string>
    <string name="try_again">Try Again</string>
    <string name="zero">00</string>


    <string name="note_info">Notă informativă</string>
    <string name="question">Question</string>
    <string name="msg_enough_question">Not Enough Question</string>
    <string name="msg_logout_success">Logout Successfully</string>
    <string name="msg_login_success">LogIn Successfully</string>
    <string name="level_not_available">level not available</string>
    <string name="msg_fill_data">Please fill all the data and submit!</string>

    <string name="msg_enough_coin">Not Enough Coins !</string>
    <string name="coin_message">You don\'t have enough coins. You need at least 4 coins to use this lifeline.</string>
    <string name="coin_message_sub">Watch a short video &amp; get free coins</string>
    <string name="skip_btn_message">SKIP. I DON\'T NEED COINS</string>
    <string name="msg_watch_video">WATCH NOW</string>
    <string name="total_score">Total Score</string>
    <string name="total_coins">Total Coins</string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="report_hint">Type a message</string>
    <string name="pg_dialog_title">\u25CF Please wait&#8230;your pdf report is generating&#8230;</string>
    <string name="achievements_exception">There was an issue communicating with achievements.</string>
    <string name="players_exception">There was an issue communicating with players.</string>
    <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="level_pre_text">Level :</string>
    <string name="msg_level_lock">Level is Locked</string>
    <string name="exit_msg">Do you want to exit the level?</string>
    <string name="bookmark_play">Play Bookmark</string>
    <string name="all_complete_msg">You have Completed All Questions !</string>
    <!--instruction  messages-->
    <string name="how_to_play">How To Play Quiz</string>
    <string name="has_option">Quiz game has 4 options</string>
    <string name="msg_right">For each right answer 4 points will be given.</string>
    <string name="msg_wrong">minus 1 points for each question</string>
    <string name="msg_lifeline">Use of Lifeline  : You can use only once per level</string>
    <string name="msg_fifty_fifty">50 – 50 : for remove two option out of Four(deduct 4 coins ).</string>
    <string name="msg_skip">Skip question: you can pass question without minus points(deduct 2 coins).</string>
    <string name="msg_opinion">Audience poll: use audience paul for check other users choose option(deduct 4 coins).</string>
    <string name="msg_reset">Reset timer: Reset timer again if you needed more time score (deduct 2 coins).</string>
    <string name="msg_leaderboard">You can compare your score with other users of apps</string>
    <string name="msg_achievement">You can achieved Achievement and level</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="textsize_dialog_lbl_fontsize">Font Size</string>
    <string name="font_size">Font Size</string>

    <!--Ad Mob Id-->
    <string name="adAppId">ca-app-pub-9815610985241268~5481202839</string>
    <string name="admob_Rewarded_Video_Ads">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_interstitial_id">ca-app-pub-9815610985241268/8751248138</string>
    <string name="admob_banner_id">ca-app-pub-9815610985241268/1986529232</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>

    <string name="slide_1_title">Agriculture Facts!</string>
    <string name="slide_1_desc">Say hello to facts by just one click!</string>

    <string name="slide_2_title">Notes</string>
    <string name="slide_2_desc">Read detailed notes on the go!</string>

    <string name="slide_3_title">Important News</string>
    <string name="slide_3_desc">All latest news at your fingertips!</string>

    <string name="slide_4_title">Quiz</string>
    <string name="slide_4_desc">Test your knowledge and improve!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> agriculture facts -> clear data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_names">Display name</string>
    <string name="induce_smile">Steel Trade</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_city">City</string>
    <string name="edit_profile_phone">Phone number</string>
    <string name="edit_profile_hobby">Hobby</string>
    <string name="select_date">Date</string>
    <string name="save_edit">Save </string>

    <string name="profile_name">Steel Trade</string>
    <string name="country_location">India</string>


    <string name="hello_world">Hello world!</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="banner_ad_unit_id">ca-app-pub-3426475354391103/1279030275</string>
    <string name="banner_ad_unit_reult">ca-app-pub-3426475354391103/3286827075</string>
    <string name="title_activity_detail_view">DetailView</string>
    <string name="button_placeholder_text">Button</string>
    <string name="checkbox">CheckBox</string>
    <string name="dashed_area_text">We are happy to help.Please reach us!</string>
    <string name="show">Show</string>
    <string name="show_dialog_text">Show a Custom Dialog and Loader</string>
    <string name="text_input_hint">text input</string>
    <string name="four">Four</string>
    <string name="three">Three</string>
    <string name="two">Two</string>
    <string name="one">One</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="detail_title_placeholder">Cool Title Of Some Movie</string>
    <string name="contact_placeholder">Super useful contact info here I guess.\n\nProfile image is from FreePik.com</string>
    <string name="social_1_placeholder">4.8</string>
    <string name="social_1_placeholder_nr">15</string>
    <string name="sumary_placeholder">Summary</string>
    <string name="description_placeholder">Description</string>
    <string name="description_tab_1">Wall</string>
    <string name="description_tab_2">Contact</string>
    <string name="image_description">Image Description</string>
    <string name="description_title_placeholder">Cool Title Of Some Movie</string>
    <string name="social_2_placeholder">Hotels &amp; Clubs</string>
    <string name="social_3_placeholder">From 2 PM</string>
    <string name="app_title">Mobi Quiz</string>
    <string name="explore">Explore</string>
    <string name="buy">"  Buy  "</string>
    <string name="hidden_view_text">Click Me</string>
    <string name="list_title_placeholder">Amazing Title</string>
    <string name="list_description_placeholder">Cool Content Description of Item</string>
    <string name="list_number_text_placeholder">Characters</string>
    <string name="list_number_placeholder">27</string>
    <string name="dialog_text_placeholder">With Custom loader (loader is also usable separately)</string>
    <string name="dialog_title_placeholder">Styled Dialog</string>
    <string name="dialog_button_text">" Cancel "</string>
    <string name="placeholder_views">16 Thousand</string>
    <string name="views">Views</string>
    <string name="followers_placeholder">503</string>
    <string name="followers">Followers</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_results_activitys">ResultsActivitys</string>
    <string name="title_activity_sample_exam">SAmpleExam</string>
    <string name="title_activity_all_quizes">AllQuizesActivity</string>
    <string name="title_activity_show_sub_transaction">ShowSubTransactionActivity</string>
    <string name="title_activity_show_all_quizes">ShowAllQuizesActivity</string>


</resources>
