<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/baseshade5"
    tools:context="com.bufferchime.agriculturefact.EditProfile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/edit_profile_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="12dp"
        android:layout_marginTop="20dp"
        android:textSize="12dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:textColor="@color/black"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:hint="@string/edit_profile_city"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/edit_profile_phone"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="Email"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textSize="12dp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:singleLine="true" />



    <LinearLayout
        android:id="@+id/select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">



    </LinearLayout>

    <Button
        android:id="@+id/save_edit_button"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:background="@color/baseshade1"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/save_edit"
        android:padding="12dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </RelativeLayout>


</LinearLayout>